--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ venv/
 # 02_crowsnest/crowsnest.py
 # 03_picnic/picnic.py
 # 04_jump_the_five/jump.py
-05_howler/howler.py
+# 05_howler/howler.py
 06_wc/wc.py
 07_gashlycrumb/gashlycrumb.py
 08_apples_and_bananas/apples.py
