Amended .gitignore to allow gashlycrumb.py to be added.

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ venv/
 # 04_jump_the_five/jump.py
 # 05_howler/howler.py
 # 06_wc/wc.py
-07_gashlycrumb/gashlycrumb.py
+# 07_gashlycrumb/gashlycrumb.py
 08_apples_and_bananas/apples.py
 09_abuse/abuse.py
 10_telephone/telephone.py
