--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ venv/
 # 05_howler/howler.py
 # 06_wc/wc.py
 # 07_gashlycrumb/gashlycrumb.py
-08_apples_and_bananas/apples.py
+# 08_apples_and_bananas/apples.py
 09_abuse/abuse.py
 10_telephone/telephone.py
 11_bottles_of_beer/bottles.py
