--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ venv/
 # 11_bottles_of_beer/bottles.py
 # 12_ransom/ransom.py
 # 13_twelve_days/twelve_days.py
-14_rhymer/rhymer.py
+# 14_rhymer/rhymer.py
 15_kentucky_friar/friar.py
 16_scrambler/scrambler.py
 17_mad_libs/mad.py
