--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ venv/
 # 13_twelve_days/twelve_days.py
 # 14_rhymer/rhymer.py
 # 15_kentucky_friar/friar.py
-16_scrambler/scrambler.py
+# 16_scrambler/scrambler.py
 17_mad_libs/mad.py
 18_gematria/gematria.py
 19_wod/wod.py
