Amended .gitignore to allow mad.py to be added.

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ venv/
 # 14_rhymer/rhymer.py
 # 15_kentucky_friar/friar.py
 # 16_scrambler/scrambler.py
-17_mad_libs/mad.py
+# 17_mad_libs/mad.py
 18_gematria/gematria.py
 19_wod/wod.py
 20_password/password.py
