Amended .gitignore to allow wod.py to be added.

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,6 @@ venv/
 # 16_scrambler/scrambler.py
 # 17_mad_libs/mad.py
 # 18_gematria/gematria.py
-19_wod/wod.py
+# 19_wod/wod.py
 20_password/password.py
 21_tictactoe/tictactoe.py
